--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="scripts/chargement.js"></script>
 </head>
 
-<body class="scroll-none-x bg-light c-dark text-upper">
+<body class="scroll-none-x c-dark text-upper">
 
 
 
@@ -22,6 +22,51 @@
 
     </header>
 
+        
+    <select id="bgchoice" onchange="changeBG()">
+        <option></option>
+        <option value="#3D538C">home</option>
+        <option value="#408EC6">web</option>
+        <option value="#D9A5B3">3D</option>
+        <option value="#CCA3E4">game</option>
+        <option value="#FFD5B9">Prod</option>
+    </select>
+    <script type='text/javascript'></script>
+
+    <div class="home">
+        <div class="left">
+        </div>
+
+        <div class="center">
+            <div class="logo_home" href="http://enzoduret.com/">
+            </div>
+
+            <div class="form-group">
+                <label>Etudiant DUT MMi bordeaux - design numérique</label>
+            </div>
+
+            <div class="form-group">
+                <label>WebDesign</label>
+            </div>
+
+            <div class="form-group">
+                <label>Projects 3D</label>
+            </div>
+
+            <div class="form-group">
+                <label>LevelDesign</label>
+            </div>
+
+            <div class="form-group">
+                <label>Production</label>
+            </div>
+        </div>
+
+        <div class="rigth">
+            <label>About</label>
+        </div>
+
+    </div>
 
     <footer class="text-center text-white" style="background-color: #E0BC77;">
         <!-- Grid container -->
@@ -29,23 +74,24 @@
             <!-- Section: Social media -->
             <section class="mb-4">
                 <!-- Facebook -->
-                <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="https://www.facebook.com/enzo.duret.14/" role="button"
-                    data-mdb-ripple-color="dark"><i class="fab fa-facebook "></i></a>
+                <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="https://www.facebook.com/enzo.duret.14/"
+                    role="button" data-mdb-ripple-color="dark"><i class="fab fa-facebook "></i></a>
 
                 <!-- Twitter -->
-                <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="https://mobile.twitter.com/enzo_duret" role="button"
-                    data-mdb-ripple-color="dark"><i class="fab fa-twitter"></i></a>
+                <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="https://mobile.twitter.com/enzo_duret"
+                    role="button" data-mdb-ripple-color="dark"><i class="fab fa-twitter"></i></a>
 
                 <!-- Instagram -->
-                <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="https://www.instagram.com/enzoduret/" role="button"
-                    data-mdb-ripple-color="dark"><i class="fab fa-instagram"></i></a>
+                <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="https://www.instagram.com/enzoduret/"
+                    role="button" data-mdb-ripple-color="dark"><i class="fab fa-instagram"></i></a>
 
                 <!-- Linkedin -->
-                <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="https://www.linkedin.com/in/enzo-duret-36535a210/" role="button"
+                <a class="btn btn-link btn-floating btn-lg text-dark m-1"
+                    href="https://www.linkedin.com/in/enzo-duret-36535a210/" role="button"
                     data-mdb-ripple-color="dark"><i class="fab fa-linkedin"></i></a>
                 <!-- Github -->
-                <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="https://github.com/0ur0boss" role="button"
-                    data-mdb-ripple-color="dark"><i class="fab fa-github"></i></a>
+                <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="https://github.com/0ur0boss"
+                    role="button" data-mdb-ripple-color="dark"><i class="fab fa-github"></i></a>
             </section>
             <!-- Section: Social media -->
         </div>
