--- a/index.html
+++ b/index.html
@@ -8,12 +8,16 @@
     <meta name="description" content="Portfolio of Enzo Duret.">
     <link rel="icon" type="image/png" href="images/icon.png">
     <!-- <link rel="stylesheet" href="styles/loader-main.css?var=1.6"> -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Jost&family=Lora:ital@1&family=Montserrat:wght@600&family=Orbitron&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="scripts/chargement.js"></script>
 </head>
 
-<body class="scroll-none-x c-dark text-upper">
+<body class="scroll-none-x c-dark text-upper" id="body">
 
 
 
@@ -22,22 +26,13 @@
 
     </header>
 
-        
-    <select id="bgchoice" onchange="changeBG()">
-        <option></option>
-        <option value="#3D538C">home</option>
-        <option value="#408EC6">web</option>
-        <option value="#D9A5B3">3D</option>
-        <option value="#CCA3E4">game</option>
-        <option value="#FFD5B9">Prod</option>
-    </select>
-    <script type='text/javascript'></script>
+
 
     <div class="home">
         <div class="left">
         </div>
 
-        <div class="center">
+        <div id="bgcolor" class="center">
             <div class="logo_home" href="http://enzoduret.com/">
             </div>
 
@@ -46,19 +41,19 @@
             </div>
 
             <div class="form-group">
-                <label>WebDesign</label>
+                <label id="web" onmouseover="over(this.id,2);" onmouseout="over(this.id,1);">WebDesign</label>
             </div>
 
             <div class="form-group">
-                <label>Projects 3D</label>
+                <label id="3D" onmouseover="over(this.id,3);" onmouseout="over(this.id,1);">Projects3D</label>
             </div>
 
             <div class="form-group">
-                <label>LevelDesign</label>
+                <label id="game" onmouseover="over(this.id,4);" onmouseout="over(this.id,1);">LevelDesign</label>
             </div>
 
             <div class="form-group">
-                <label>Production</label>
+                <label id="prod" onmouseover="over(this.id,5);" onmouseout="over(this.id,1);">Production</label>
             </div>
         </div>
 
@@ -71,27 +66,47 @@
     <footer class="text-center text-white" style="background-color: #E0BC77;">
         <!-- Grid container -->
         <div class="container pt-4">
+
+            <a>Contactez moi : enzodupro@gmail.com</a>
+            <br>
+               <a> ou sur sur mes reseaux :</a>
+                
+
             <!-- Section: Social media -->
             <section class="mb-4">
                 <!-- Facebook -->
                 <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="https://www.facebook.com/enzo.duret.14/"
-                    role="button" data-mdb-ripple-color="dark"><i class="fab fa-facebook "></i></a>
+                    role="button" data-mdb-ripple-color="dark">
+                    <img src="images/SVG/facebook.svg" alt="un triangle aux trois côtés égaux" height="40px"
+                        width="40px" />
+                </a>
 
                 <!-- Twitter -->
                 <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="https://mobile.twitter.com/enzo_duret"
-                    role="button" data-mdb-ripple-color="dark"><i class="fab fa-twitter"></i></a>
+                    role="button" data-mdb-ripple-color="dark">
+                    <img src="images/SVG/twitter.svg" alt="un triangle aux trois côtés égaux" height="40px"
+                        width="40px" />
+                </a>
 
                 <!-- Instagram -->
                 <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="https://www.instagram.com/enzoduret/"
-                    role="button" data-mdb-ripple-color="dark"><i class="fab fa-instagram"></i></a>
+                    role="button" data-mdb-ripple-color="dark">
+                    <img src="images/SVG/instagrame.svg" alt="un triangle aux trois côtés égaux" height="40px"
+                        width="40px" />
+                </a>
 
                 <!-- Linkedin -->
                 <a class="btn btn-link btn-floating btn-lg text-dark m-1"
                     href="https://www.linkedin.com/in/enzo-duret-36535a210/" role="button"
-                    data-mdb-ripple-color="dark"><i class="fab fa-linkedin"></i></a>
+                    data-mdb-ripple-color="dark"><img src="images/SVG/linked.svg"
+                        alt="un triangle aux trois côtés égaux" height="40px" width="40px" />
+                </a>
                 <!-- Github -->
                 <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="https://github.com/0ur0boss"
-                    role="button" data-mdb-ripple-color="dark"><i class="fab fa-github"></i></a>
+                    role="button" data-mdb-ripple-color="dark">
+                    <img src="images/SVG/iconmonstr-github-1.svg" alt="un triangle aux trois côtés égaux" height="40px"
+                        width="40px" />
+                </a>
             </section>
             <!-- Section: Social media -->
         </div>
@@ -104,6 +119,9 @@
         </div>
         <!-- Copyright -->
     </footer>
+
+    <!-- <a href="https://fr.freepik.com/vecteurs/logo">Logo vecteur créé par alicia_mb - fr.freepik.com</a> -->
+
 
     <script src="scripts/index.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
