--- a/index.html
+++ b/index.html
@@ -1,140 +1,87 @@
 <!DOCTYPE html>
-<html lang="fr" class="bg-light scroll-none-x">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/png" href="icon.png">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Enzo Duret Portfolio</title>
-    <meta name="description" content="Portfolio of Enzo Duret.">
-    <link rel="icon" type="image/png" href="images/icon.png">
-    <!-- <link rel="stylesheet" href="styles/loader-main.css?var=1.6"> -->
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link
-        href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Jost&family=Lora:ital@1&family=Montserrat:wght@600&family=Orbitron&display=swap"
-        rel="stylesheet">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script src="scripts/chargement.js"></script>
-</head>
-
-<body class="scroll-none-x c-dark text-upper" id="body">
+  </head>
 
 
+  <body>
+    
+    <canvas id="bg"></canvas>
+
+    <main>
+
+      <header>
+        <h1>Enzo Duret</h1>
+        <p>👺 Welcome to my website!</p>
+      </header>
 
 
-    <header class="header">
+      <blockquote>
+        <p>I like creates 3D stuff and putting it on the internet</p>
+      </blockquote>
 
-    </header>
+      <section>
+        <h2>📜 what about me ?</h2>
+        <p>
+          Je suis étudiant en Mmi.
+          Je suis encore en études mais j’ai déjà vu le monde professionnel à travers des saisons. 
+        </p>
 
+        <p>
+          Je suis motivé pour apprendre de nouvelles choses et consolider mes atouts.
+          Ici vous trouverez différentes créations et projets que j’ai pu faire.  
+        </p>
 
+        <p>
+          Je souhaite m'orienter vers du développement 3D, j’apprend à maîtriser Blender, Unity 3D, et Three js.        
+        </p>
 
-    <div class="home">
-        <div class="left">
-        </div>
+      </section>
 
-        <div id="bgcolor" class="center">
-            <div class="logo_home" href="http://enzoduret.com/">
-            </div>
+      <section class="light">
+        <h2>👩🏽‍🚀 Projects</h2>
 
-            <div class="form-group">
-                <label>Etudiant DUT MMi bordeaux - design numérique</label>
-            </div>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </p>
 
-            <div class="form-group">
-                <label id="web" onmouseover="over(this.id,2);" onmouseout="over(this.id,1);">WebDesign</label>
-            </div>
+        <h2>🏆 Accomplishments</h2>
 
-            <div class="form-group">
-                <label id="3D" onmouseover="over(this.id,3);" onmouseout="over(this.id,1);">Projects3D</label>
-            </div>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </p>
 
-            <div class="form-group">
-                <label id="game" onmouseover="over(this.id,4);" onmouseout="over(this.id,1);">LevelDesign</label>
-            </div>
+      </section>
 
-            <div class="form-group">
-                <label id="prod" onmouseover="over(this.id,5);" onmouseout="over(this.id,1);">Production</label>
-            </div>
-        </div>
+      <blockquote>
+        <p>After All, the world is a scene, and the world is a scene of entertainment <br>- Alastor</p>
+      </blockquote>
 
-        <div class="rigth">
-            <label>About</label>
-        </div>
+      <section class="left">
+        <h2>💼 Work History</h2>
 
-    </div>
+        <h3>I did 3 years in catering</h3>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </p>
+        <h3>Stage in video game</h3>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </p>
+        <h3>and after ?</h3>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </p>
 
-    <footer class="text-center text-white" style="background-color: #E0BC77;">
-        <!-- Grid container -->
-        <div class="container pt-4">
+      </section>
 
-            <a>Contactez moi : enzodupro@gmail.com</a>
-            <br>
-               <a> ou sur sur mes reseaux :</a>
-                
-
-            <!-- Section: Social media -->
-            <section class="mb-4">
-                <!-- Facebook -->
-                <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="https://www.facebook.com/enzo.duret.14/"
-                    role="button" data-mdb-ripple-color="dark">
-                    <img src="images/SVG/facebook.svg" alt="un triangle aux trois côtés égaux" height="40px"
-                        width="40px" />
-                </a>
-
-                <!-- Twitter -->
-                <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="https://mobile.twitter.com/enzo_duret"
-                    role="button" data-mdb-ripple-color="dark">
-                    <img src="images/SVG/twitter.svg" alt="un triangle aux trois côtés égaux" height="40px"
-                        width="40px" />
-                </a>
-
-                <!-- Instagram -->
-                <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="https://www.instagram.com/enzoduret/"
-                    role="button" data-mdb-ripple-color="dark">
-                    <img src="images/SVG/instagrame.svg" alt="un triangle aux trois côtés égaux" height="40px"
-                        width="40px" />
-                </a>
-
-                <!-- Linkedin -->
-                <a class="btn btn-link btn-floating btn-lg text-dark m-1"
-                    href="https://www.linkedin.com/in/enzo-duret-36535a210/" role="button"
-                    data-mdb-ripple-color="dark"><img src="images/SVG/linked.svg"
-                        alt="un triangle aux trois côtés égaux" height="40px" width="40px" />
-                </a>
-                <!-- Github -->
-                <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="https://github.com/0ur0boss"
-                    role="button" data-mdb-ripple-color="dark">
-                    <img src="images/SVG/iconmonstr-github-1.svg" alt="un triangle aux trois côtés égaux" height="40px"
-                        width="40px" />
-                </a>
-            </section>
-            <!-- Section: Social media -->
-        </div>
-        <!-- Grid container -->
-
-        <!-- Copyright -->
-        <div class="text-center text-dark p-3" style="background-color: rgb(202, 169, 108);">
-            © 2021 Copyright:
-            <a class="text-dark" href="http://enzoduret.com/">enzoduret.com</a>
-        </div>
-        <!-- Copyright -->
-    </footer>
-
-    <!-- <a href="https://fr.freepik.com/vecteurs/logo">Logo vecteur créé par alicia_mb - fr.freepik.com</a> -->
+    </main>
 
 
-    <script src="scripts/index.js"></script>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-        crossorigin="anonymous"></script>
-
-    <!-- Thank you for reading -->
-</body>
-
+    <script type="module" src="/main.js"></script>
+  </body>
 </html>
