--- a/index.html
+++ b/index.html
@@ -552,18 +552,15 @@
               <div class="bio-wrapper">
                 <div class="bio-panel">
                   <h1 class="bio-title">BIO</h1>
-                  <p class="bio-paragraph">I am a 3D Character Modeler with roughly four years of experience, I&#x27;m
-                    italian and I&#x27;m currently based in France.<br />My main softwares are Maya and Zbrush, and I
-                    have worked in cartoon character development for both Tv series and commercials.<br />‍<br />I’m a
-                    space geek (space!) and I am very passionate about videogames as well: I was playing before I could
-                    read. So much for tutorials. <br />I am a team player with leadership skills. I am also strong in
-                    problem solving and in the fine art of Bodging. <br />‍ </p>
+                  <p class="bio-paragraph">Passionate about the world of 3D creation, I bring a diverse skill set to the table, stemming from my educational background in multimedia and game design. My expertise spans 3D modeling, texturing, animation, and rendering, with Blender being my primary tool of choice. Proficient in Blender, I'm adept at customizing C# scripts for task automation and exploring advanced features like nodes. While Blender is my mainstay, I've also ventured into other software such as Substance 3D and Maya, with a continuous appetite for expanding my skill set.
+
+                     <br />‍ </p>
                 </div>
               </div>
             </div>
           </div>
         </div>
-        <div class="bio-section">
+        <!-- <div class="bio-section">
           <div class="bio-container">
             <div class="skill-wrapper lskill">
               <div class="skill-panel">
@@ -855,7 +852,7 @@
             </div>
           </div>
           <div id="contact-tablet" class="tablet-navbar-dummy w-hidden-main"></div>
-        </div>
+        </div> -->
         <div class="section_ball contact"></div>
       </div>
       <!-- Partie ABOUT -->
@@ -871,8 +868,7 @@
         <div class="news-label-wrapper text-contact-tab">
           <div class="contact-container w-container">
             <div class="contact_text">Do you want to know more?<br />Follow me on the <strong>Social
-                Networks</strong>!<br />You will find my WIPs, sketches, tests and the latest
-              news<br /><br /><em>enzoduret@gmail.com<br />France</em></div>
+                Networks</strong>!<br /><br /><em>enzoduret@gmail.com<br />France</em></div>
           </div>
         </div>
         <div class="mobile_social_container w-hidden-main">
