--- a/index.html
+++ b/index.html
@@ -505,10 +505,10 @@
               <div class="photo-wrapper">
                 <div class="about-photo"> </div>
               </div>
-              <div class="resume-wrapper"><a href="https://www.dropbox.com/" data-ix="downloadresume" target="_blank"
+              <div class="resume-wrapper"><a href="/CV_EnzoDuret_Art.pdf" data-ix="downloadresume" target="_blank"
                   class="resume-label w-inline-block">
                   <div class="resume-label text">DOWNLOAD<br /><span class="testo-grosso">RESUME</span></div>
-                </a><a href="https://enzoduret.com/static/media/CvEnzoDuret.b37ad64d.pdf" data-ix="downloadresume"
+                </a><a href="/CV_EnzoDuret_Art.pdf" data-ix="downloadresume"
                   target="_blank" class="resume_circle_wrapper w-inline-block">
                   <div class="resume-circle"></div>
                   <div class="resume-inner-circle"><img
